Material Texture Paint slots are not available for Blender Game UI. #42330

Closed
opened 2014-10-21 14:34:42 +02:00 by ronan ducluzeau · 7 comments

System Information
Ubuntu 14.04 64bits Nvidia Titan Black

Blender Version
Broken: 2.72 hash 3ef4b3e

Short description of error
No image texture is recognized as an available paint slot in Texture Paint Mode with Blender Game UI.
As a consequence, game creators have to switch to Blender Render UI to be able to use new Material Painting mode if they want to GSL material textures.
Or they have to paint one texture at a time in Image Painting mode and not benefit of new automatic setup.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

In default startup.blend, switch to Blender Game UI.
Select default Cube and go to Texture Paint mode. ->There are two warnings : "Missing UVs" and "Missing Texture Slots".
Click on Add Simple UVs button. -> Button vanished, UVmap is created and Cube is now pink.
Click on Add Paint Slot.
Choose a Diffuse Color.
Keep default settings for new image and click OK button. -> A Diffuse Color map is created, added to material. But Cube is still pink. There is still Add Paint Slots button and "Missing Texture Slots" Warning is still present.
In Slots Tab, Available Paint Slots list is empty. There is no button available to add new paint slots.

At least, if it is intended behavior, Warning should tell that it only works for Blender Render UI instead of giving impression that no texture exists.

**System Information** Ubuntu 14.04 64bits Nvidia Titan Black **Blender Version** Broken: 2.72 hash 3ef4b3e **Short description of error** No image texture is recognized as an available paint slot in Texture Paint Mode with Blender Game UI. As a consequence, game creators have to switch to Blender Render UI to be able to use new Material Painting mode if they want to GSL material textures. Or they have to paint one texture at a time in Image Painting mode and not benefit of new automatic setup. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps In default startup.blend, switch to Blender Game UI. Select default Cube and go to Texture Paint mode. ->There are two warnings : "Missing UVs" and "Missing Texture Slots". Click on Add Simple UVs button. -> Button vanished, UVmap is created and Cube is now pink. Click on Add Paint Slot. Choose a Diffuse Color. Keep default settings for new image and click OK button. -> A Diffuse Color map is created, added to material. But Cube is still pink. There is still Add Paint Slots button and "Missing Texture Slots" Warning is still present. In Slots Tab, Available Paint Slots list is empty. There is no button available to add new paint slots. At least, if it is intended behavior, Warning should tell that it only works for Blender Render UI instead of giving impression that no texture exists.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-10-21 15:21:55 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, hrm, mind having a look here as well? :)

@Psy-Fi, hrm, mind having a look here as well? :)

This issue was referenced by 3b7794dab7

This issue was referenced by 3b7794dab727897967abd829562c2328900225cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3b7794dab7.

Closed by commit 3b7794dab7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42330
No description provided.