Fix T42330 game engine does not allow texture slots generation.